// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextSummary render() renders at least three contexts 1`] = `
<div
  className="context-summary"
>
  <UserSummary
    data={
      Object {
        "email": "mail@example.org",
        "id": "1",
      }
    }
    key="user"
  />
  <GenericSummary
    data={Object {}}
    key="browser"
    unknownTitle="Unknown Browser"
  />
  <DeviceSummary
    data={
      Object {
        "arch": "x86",
        "family": "iOS",
        "model": "iPhone10,5",
        "type": "device",
      }
    }
    key="device"
  />
</div>
`;

exports[`ContextSummary render() renders client_os too 1`] = `
<div
  className="context-summary"
>
  <UserSummary
    data={
      Object {
        "email": "mail@example.org",
        "id": "1",
      }
    }
    key="user"
  />
  <GenericSummary
    data={
      Object {
        "name": "Chrome",
        "version": "65.0.3325",
      }
    }
    key="browser"
    unknownTitle="Unknown Browser"
  />
  <GenericSummary
    data={
      Object {
        "name": "Electron",
        "type": "runtime",
        "version": "1.7.13",
      }
    }
    key="runtime"
    unknownTitle="Unknown Runtime"
  />
  <OsSummary
    data={
      Object {
        "build": "17E199",
        "kernel_version": "17.5.0",
        "name": "Mac OS X",
        "type": "os",
        "version": "10.13.4",
      }
    }
    key="client_os"
  />
</div>
`;

exports[`ContextSummary render() renders nothing with a single user context 1`] = `""`;

exports[`ContextSummary render() renders nothing without contexts 1`] = `""`;

exports[`ContextSummary render() renders up to four contexts 1`] = `
<div
  className="context-summary"
>
  <UserSummary
    data={
      Object {
        "email": "mail@example.org",
        "id": "1",
      }
    }
    key="user"
  />
  <GenericSummary
    data={
      Object {
        "name": "Chrome",
        "version": "65.0.3325",
      }
    }
    key="browser"
    unknownTitle="Unknown Browser"
  />
  <GenericSummary
    data={
      Object {
        "name": "Electron",
        "type": "runtime",
        "version": "1.7.13",
      }
    }
    key="runtime"
    unknownTitle="Unknown Runtime"
  />
  <OsSummary
    data={
      Object {
        "build": "17E199",
        "kernel_version": "17.5.0",
        "name": "Mac OS X",
        "type": "os",
        "version": "10.13.4",
      }
    }
    key="os"
  />
</div>
`;

exports[`ContextSummary render() should bail out with empty contexts 1`] = `""`;

exports[`ContextSummary render() should prefer client_os over os 1`] = `
<div
  className="context-summary"
>
  <UserSummary
    data={
      Object {
        "email": "mail@example.org",
        "id": "1",
      }
    }
    key="user"
  />
  <GenericSummary
    data={
      Object {
        "name": "Chrome",
        "version": "65.0.3325",
      }
    }
    key="browser"
    unknownTitle="Unknown Browser"
  />
  <GenericSummary
    data={
      Object {
        "name": "Electron",
        "type": "runtime",
        "version": "1.7.13",
      }
    }
    key="runtime"
    unknownTitle="Unknown Runtime"
  />
  <OsSummary
    data={
      Object {
        "build": "17E199",
        "kernel_version": "17.5.0",
        "name": "Mac OS X",
        "type": "os",
        "version": "10.13.4",
      }
    }
    key="client_os"
  />
</div>
`;

exports[`ContextSummary render() should skip a missing user context 1`] = `
<div
  className="context-summary"
>
  <GenericSummary
    data={
      Object {
        "name": "Electron",
        "type": "runtime",
        "version": "1.7.13",
      }
    }
    key="runtime"
    unknownTitle="Unknown Runtime"
  />
  <OsSummary
    data={
      Object {
        "build": "17E199",
        "kernel_version": "17.5.0",
        "name": "Mac OS X",
        "type": "os",
        "version": "10.13.4",
      }
    }
    key="os"
  />
  <DeviceSummary
    data={
      Object {
        "arch": "x86",
        "family": "iOS",
        "model": "iPhone10,5",
        "type": "device",
      }
    }
    key="device"
  />
</div>
`;

exports[`ContextSummary render() should skip non-default named contexts 1`] = `
<div
  className="context-summary"
>
  <UserSummary
    data={
      Object {
        "email": "mail@example.org",
        "id": "1",
      }
    }
    key="user"
  />
  <GenericSummary
    data={
      Object {
        "name": "Electron",
        "type": "runtime",
        "version": "1.7.13",
      }
    }
    key="runtime"
    unknownTitle="Unknown Runtime"
  />
  <OsSummary
    data={
      Object {
        "build": "17E199",
        "kernel_version": "17.5.0",
        "name": "Mac OS X",
        "type": "os",
        "version": "10.13.4",
      }
    }
    key="os"
  />
  <DeviceSummary
    data={
      Object {
        "arch": "x86",
        "family": "iOS",
        "model": "iPhone10,5",
        "type": "device",
      }
    }
    key="device"
  />
</div>
`;

exports[`GpuSummary render() renders name and vendor 1`] = `
<div
  className="context-item arm"
>
  <span
    className="context-item-icon"
  />
  <h3>
    Mali-T880
  </h3>
  <p>
    <strong>
      Vendor:
    </strong>
     
    ARM
  </p>
</div>
`;

exports[`GpuSummary render() renders unknown when no vendor 1`] = `
<div
  className="context-item apple-a"
>
  <span
    className="context-item-icon"
  />
  <h3>
    Apple A8 GPU
  </h3>
  <p>
    <strong>
      Vendor:
    </strong>
     
    Unknown
  </p>
</div>
`;

exports[`OsSummary render() renders the kernel version when no version 1`] = `
<div
  className="context-item mac-os-x"
>
  <span
    className="context-item-icon"
  />
  <h3>
    Mac OS X
  </h3>
  <p>
    <strong>
      Kernel:
    </strong>
     
    17.5.0
  </p>
</div>
`;

exports[`OsSummary render() renders the version string 1`] = `
<div
  className="context-item mac-os-x"
>
  <span
    className="context-item-icon"
  />
  <h3>
    Mac OS X
  </h3>
  <p>
    <strong>
      Version:
    </strong>
     
    10.13.4
  </p>
</div>
`;

exports[`OsSummary render() renders unknown when no version 1`] = `
<div
  className="context-item mac-os-x"
>
  <span
    className="context-item-icon"
  />
  <h3>
    Mac OS X
  </h3>
  <p>
    <strong>
      Version:
    </strong>
     
    Unknown
  </p>
</div>
`;
